<resources>
    <string name="app_name">Track Store</string>

    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>


    <!--  Hints -->
    <string name="name_hint"> Product Name</string>
    <string name="price_hint"> Product Price</string>
    <string name="quantity_hint"> Product Quantity</string>

    <!--   menus title -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="insert_dummy">Insert Dummy Product</string>
    <string name="delete_all">Remove All Products</string>

    <!-- Empty view Text for empty store  -->
    <string name="emptyView_text1">Nothing is available in store</string>
    <string name="emptyView_text2">Start adding products</string>

    <!--  Back Dialog message  -->
    <string name="discard_message">Discard your changes and quit editing</string>
    <string name="discard_button">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Delete Dialog messages  -->
    <string name="delete_message">Do you want to delete this product</string>
    <string name="delete_all_message">Do you want to delete all products</string>
    <string name="delete_yes">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="edit_intent">Edit Product</string>

</resources>
